[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/BattleDeckEnergy/BattleDeckEnergy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD/RoundCounter/RoundCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/EndTurnButton/EndTurnButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/SimpleDecks/DiscardPile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/PlayerBoard.gd" type="Script" id=5]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/SimpleDecks/DrawPile.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/PlayerInterface/BattleBoard/PlayerBoard/SimpleDecks/ExhaustPile.tscn" type="PackedScene" id=7]






[node name="PlayerBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawPile" parent="." instance=ExtResource( 6 )]
margin_top = -128.0
margin_bottom = -64.0

[node name="DiscardPile" parent="." instance=ExtResource( 4 )]
margin_top = -128.0
margin_bottom = -64.0

[node name="ExhaustPile" parent="." instance=ExtResource( 7 )]
margin_top = -216.0
margin_bottom = -152.0

[node name="EndTurnButton" parent="." instance=ExtResource( 3 )]
margin_left = -64.0
margin_top = -20.0
margin_right = -64.0
margin_bottom = -20.0

[node name="RoundCounter" parent="." instance=ExtResource( 2 )]
margin_top = -304.0
margin_bottom = -240.0

[node name="BattleDeckEnergy" parent="." instance=ExtResource( 1 )]
margin_top = -216.0
margin_bottom = -152.0
[connection signal="pressed" from="EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
